<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <!-- ImageView Header -->
        <ImageView
            android:id="@+id/imageViewHeader"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/headerfooter"
            android:layout_marginTop="-75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- TextView Título -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/imageViewHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EditText ID -->
        <EditText
            android:id="@+id/editTextId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:enabled="false"
            android:visibility="gone"
            android:inputType="text"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EditText Nombre -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/editTextId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EditText Precio -->
        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Button Agregar -->
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/editTextPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- LinearLayout Botones -->
        <LinearLayout
            android:id="@+id/linearlayoutbuttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/buttonAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/buttonGetSqlite"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/button_get_sqlite" />

            <Button
                android:id="@+id/buttonGetFirebase"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/button_get_firebase" />
        </LinearLayout>

        <!-- Button Sincronizar Firebase -->
        <Button
            android:id="@+id/buttonSichronized"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_synchronize_firebase"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/linearlayoutbuttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ListView Products -->
        <ListView
            android:id="@+id/listViewProducts"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSichronized"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ImageView Footer -->
        <ImageView
            android:id="@+id/imageViewFooter"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/headerfooter"
            android:layout_marginBottom="-80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
