<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">
    <!-- Imagen de cabecera -->
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/header_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/AuthenticationActivity_Logintitle_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingBottom="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tarjeta de autenticación -->
    <androidx.cardview.widget.CardView
        android:id="@+id/auth_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Campo de texto para el nombre de usuario -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AuthenticationActivity_username_hint"
                android:layout_marginBottom="16dp" />

            <!-- Campo de texto para la contraseña -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AuthenticationActivity_password_hint"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp" />

            <!-- Botón de inicio de sesión -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AuthenticationActivity_login_button_text"
                android:background="@drawable/button_style"
                app:backgroundTint="@null"
                android:layout_marginBottom="30dp" />

            <!-- Botón de inicio de sesión con Google -->
            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AuthenticationActivity_google_login_button_text"
                android:background="@drawable/button_style"
                app:backgroundTint="@null"
                android:layout_marginBottom="30dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Imagen de pie de página -->
    <ImageView
        android:id="@+id/footer_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/headerandfooter"
        android:layout_marginBottom="-125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>